--- a/works/practice/index.html
+++ b/works/practice/index.html
@@ -49,7 +49,7 @@
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
       <div id="controller">
-        <button id="embossButton">emboss</button>
+        <button id="sunglassButton">emboss</button>
       </div>
     </main>
     <!-- Script -->
