--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/flare/index.html"><img loading="lazy" src="./home/img/og/og-min-flare.png" alt="flare"></a><p>flare / may 30, 2020</p></li>
             <li><a href="./works/crazyRect/index.html"><img loading="lazy" src="./home/img/og/og-min-crazyRect.png" alt="crazyRect"></a><p>crazyRect / may 29, 2020</p></li>
             <li><a href="./works/illumina/index.html"><img loading="lazy" src="./home/img/og/og-min-illumina.png" alt="illumina"></a><p>illumina / may 27, 2020</p></li>
             <li><a href="./works/blooming/index.html"><img loading="lazy" src="./home/img/og/og-min-blooming.png" alt="blooming"></a><p>blooming / May 26, 2020</p></li>
