--- a/works/practice/index.html
+++ b/works/practice/index.html
@@ -49,7 +49,7 @@
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
       <div id="controller">
-        <button id="sunglassButton">emboss</button>
+        <button id="fadeButton">emboss</button>
       </div>
     </main>
     <!-- Script -->
@@ -58,4 +58,3 @@
     <script src="./practice.js"></script>
   </body>
 </html>
-
