--- a/works/fake3dTriangle/index.html
+++ b/works/fake3dTriangle/index.html
@@ -51,6 +51,7 @@
       <ul id="navigation">
         <li>Scroll up, down and click.</li>
       </ul>
+      <p class="count"><input type="range" id="range" min="1" max="36" step="1" value="12"></p>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
