--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/farewell/index.html"><img loading="lazy" src="./home/img/og/og-min-farewell.png" alt="farewell"></a><p>farewell / Jun 04, 2020</p></li>
             <li><a href="./works/fake3dTriangle/index.html"><img loading="lazy" src="./home/img/og/og-min-fake3dTriangle.png" alt="fake3dTriangle"></a><p>fake3dTriangle / Jun 03, 2020</p></li>
             <li><a href="./works/square/index.html"><img loading="lazy" src="./home/img/og/og-min-square.png" alt="square"></a><p>square / Jun 01, 2020</p></li>
             <li><a href="./works/wrinkle/index.html"><img loading="lazy" src="./home/img/og/og-min-wrinkle.png" alt="wrinkle"></a><p>wrinkle / may 30, 2020</p></li>
