--- a/works/ultima/index.html
+++ b/works/ultima/index.html
@@ -56,7 +56,7 @@
         <li>360</li>
       </ul>
       <ul id="navigation">
-        <li>Scroll up and down.</li>
+        <li>Scroll up, down and click.</li>
       </ul>
     </main>
     <!-- Script -->
