--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/petal/index.html"><img loading="lazy" src="./home/img/og/og-min-petal.png" alt="petal"></a><p>petal / Jun 08, 2020</p></li>
             <li><a href="./works/ultima/index.html"><img loading="lazy" src="./home/img/og/og-min-ultima.png" alt="ultima"></a><p>ultima / Jun 07, 2020</p></li>
             <li><a href="./works/angle/index.html"><img loading="lazy" src="./home/img/og/og-min-angle.png" alt="angle"></a><p>angle / Jun 06, 2020</p></li>
             <li><a href="./works/turnsole/index.html"><img loading="lazy" src="./home/img/og/og-min-turnsole.png" alt="turnsole"></a><p>turnsole / Jun 05, 2020</p></li>
