--- a/works/orangeKunVer2/index.html
+++ b/works/orangeKunVer2/index.html
@@ -3,6 +3,11 @@
   <head>
     <!-- Title -->
     <title>Let's cheer up!</title>
+    <!-- Meta -->
+    <meta charset="utf-8">
+    <meta name="description" content="I'm a non-professional. Neither web dev nor designer.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
