--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/particleOnPicture/index.html"><img loading="lazy" src="./home/img/og/og-min-particleOnPicture.png" alt="particleOnPicture"></a><p>particleOnPicture / Jun 12, 2020</p></li>
             <li><a href="./works/nostalgiaOrFear/index.html"><img loading="lazy" src="./home/img/og/og-min-nostalgiaOrFear.png" alt="nostalgiaOrFear"></a><p>nostalgiaOrFear / Jun 11, 2020</p></li>
             <li><a href="./works/noise/index.html"><img loading="lazy" src="./home/img/og/og-min-noise.png" alt="noise"></a><p>noise / Jun 10, 2020</p></li>
             <li><a href="./works/circle/index.html"><img loading="lazy" src="./home/img/og/og-min-circle.png" alt="circle"></a><p>circle / Jun 10, 2020</p></li>
