--- a/works/particleOnText/index.html
+++ b/works/particleOnText/index.html
@@ -56,7 +56,7 @@
             <p>Change Text</p>
           </dt>
           <dd>
-            <input type="text" id="text" value="PARTICLE" placeholder="Please input.">
+            <input type="text" id="text" value="How are you?" placeholder="Please input.">
           </dd>
           <dt>
             <p>Composition</p>
