--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/eyesight/index.html"><img loading="lazy" src="./home/img/og/og-min-eyesight.png" alt="eyesight"></a><p>eyesight / Jun 18, 2020</p></li>
             <li><a href="./works/particleOnText/index.html"><img loading="lazy" src="./home/img/og/og-min-particleOnText.png" alt="particleOnText"></a><p>particleOnText / Jun 17, 2020</p></li>
             <li><a href="./works/falling/index.html"><img loading="lazy" src="./home/img/og/og-min-falling.png" alt="falling"></a><p>falling / Jun 15, 2020</p></li>
             <li><a href="./works/particleOnPicture/index.html"><img loading="lazy" src="./home/img/og/og-min-particleOnPicture.png" alt="particleOnPicture"></a><p>particleOnPicture / Jun 12, 2020</p></li>
