--- a/works/eyesight/index.html
+++ b/works/eyesight/index.html
@@ -49,7 +49,7 @@
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
       <ul id="navigation">
-        <li>Scroll up, down.</li>
+        <li>Scroll up, down and right.</li>
       </ul>
     </main>
     <!-- Script -->
