--- a/works/grayscaleParticle/index.html
+++ b/works/grayscaleParticle/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | image">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-image.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | grayscaleParticle">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-grayscaleParticle.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | image</title>
+    <title>Toshiya Marukubo | Homepage | grayscaleParticle</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,7 +36,7 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>image</h1>
+      <h1>grayscaleParticle</h1>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
         <li id="other">Other</li>
@@ -49,13 +49,13 @@
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
       <ul id="navigation">
-        <li>Scroll up, down, right and click.</li>
+        <li>Please scroll up, down and click.</li>
       </ul>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="../../home/js/other.js"></script>
-    <script src="./image.js"></script>
+    <script src="./grayscaleParticle.js"></script>
   </body>
 </html>
 
