--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
-            <li><a href="./works/meaningless/index.html"><img loading="lazy" src="./home/img/og/og-min-meaningless.png" alt="meaningless"></a><p>meaningless / Jun 19, 2020</p></li>
+            <li><a href="./works/range/index.html"><img loading="lazy" src="./home/img/og/og-min-range.png" alt="range"></a><p>range / Jun 20, 2020</p></li>
+            <li><a href="./works/checkBox/index.html"><img loading="lazy" src="./home/img/og/og-min-checkBox.png" alt="checkBox"></a><p>checkBox / Jun 19, 2020</p></li>
             <li><a href="./works/grayscaleParticle/index.html"><img loading="lazy" src="./home/img/og/og-min-grayscaleParticle.png" alt="grayscaleParticle"></a><p>grayscaleParticle / Jun 19, 2020</p></li>
             <li><a href="./works/eyesight/index.html"><img loading="lazy" src="./home/img/og/og-min-eyesight.png" alt="eyesight"></a><p>eyesight / Jun 18, 2020</p></li>
             <li><a href="./works/particleOnText/index.html"><img loading="lazy" src="./home/img/og/og-min-particleOnText.png" alt="particleOnText"></a><p>particleOnText / Jun 17, 2020</p></li>
