--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/perfectNavigation/index.html"><img loading="lazy" src="./home/img/og/og-min-perfectNavigation.png" alt="perfectNavigation"></a><p>perfectNavigation / Jun 21, 2020</p></li>
             <li><a href="./works/range/index.html"><img loading="lazy" src="./home/img/og/og-min-range.png" alt="range"></a><p>range / Jun 20, 2020</p></li>
             <li><a href="./works/checkBox/index.html"><img loading="lazy" src="./home/img/og/og-min-checkBox.png" alt="checkBox"></a><p>checkBox / Jun 19, 2020</p></li>
             <li><a href="./works/grayscaleParticle/index.html"><img loading="lazy" src="./home/img/og/og-min-grayscaleParticle.png" alt="grayscaleParticle"></a><p>grayscaleParticle / Jun 19, 2020</p></li>
