--- a/works/jellyfish/index.html
+++ b/works/jellyfish/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | playBallPool">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-playBallPool.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | jellyfish">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-jellyfish.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | playBallPool</title>
+    <title>Toshiya Marukubo | Homepage | jellyfish</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,26 +36,23 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>playBallPool</h1>
+      <h1>jellyfish</h1>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
         <li id="other">Other</li>
         <li><a href="../../index.html">Home</a></li>
-      </ul>    
+      </ul>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <main id="main" style="diaplay: none;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
-      <ul id="navigation">
-        <li>Please move the mouse or click.</li>
-      </ul>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="../../home/js/other.js"></script>
-    <script src="./playBallPool.js"></script>
+    <script src="./jellyfish.js"></script>
   </body>
 </html>
 
