--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/jellyfish/index.html"><img loading="lazy" src="./home/img/og/og-min-jellyfish.png" alt="jellyfish"></a><p>jellyfish / Jun 24, 2020</p></li>
             <li><a href="./works/fighting/index.html"><img loading="lazy" src="./home/img/og/og-min-fighting.png" alt="fighting"></a><p>fighting / Jun 23, 2020</p></li>
             <li><a href="./works/playBallPool/index.html"><img loading="lazy" src="./home/img/og/og-min-playBallPool.png" alt="playBallPool"></a><p>playBallPool / Jun 23, 2020</p></li>
             <li><a href="./works/perfectNavigation/index.html"><img loading="lazy" src="./home/img/og/og-min-perfectNavigation.png" alt="perfectNavigation"></a><p>perfectNavigation / Jun 21, 2020</p></li>
