--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
-            <li><a href="./works/countdown/index.html"><img loading="lazy" src="./home/img/og/og-min-countdown.png" alt="countdown"></a><p>countdown / Jun 24, 2020</p></li>
+            <li><a href="./works/countup/index.html"><img loading="lazy" src="./home/img/og/og-min-countup.png" alt="countup"></a><p>countup / Jun 24, 2020</p></li>
             <li><a href="./works/uneune/index.html"><img loading="lazy" src="./home/img/og/og-min-uneune.png" alt="uneune"></a><p>uneune / Jun 24, 2020</p></li>
             <li><a href="./works/jellyfish/index.html"><img loading="lazy" src="./home/img/og/og-min-jellyfish.png" alt="jellyfish"></a><p>jellyfish / Jun 24, 2020</p></li>
             <li><a href="./works/fighting/index.html"><img loading="lazy" src="./home/img/og/og-min-fighting.png" alt="fighting"></a><p>fighting / Jun 23, 2020</p></li>
