--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/greeting/index.html"><img loading="lazy" src="./home/img/og/og-min-greeting.png" alt="greeting"></a><p>greeting / Jun 25, 2020</p></li>
             <li><a href="./works/countup/index.html"><img loading="lazy" src="./home/img/og/og-min-countup.png" alt="countup"></a><p>countup / Jun 24, 2020</p></li>
             <li><a href="./works/uneune/index.html"><img loading="lazy" src="./home/img/og/og-min-uneune.png" alt="uneune"></a><p>uneune / Jun 24, 2020</p></li>
             <li><a href="./works/jellyfish/index.html"><img loading="lazy" src="./home/img/og/og-min-jellyfish.png" alt="jellyfish"></a><p>jellyfish / Jun 24, 2020</p></li>
