--- a/works/fun/index.html
+++ b/works/fun/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | example">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-example.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | fun">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-fun.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | example</title>
+    <title>Toshiya Marukubo | Homepage | fun</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,7 +36,7 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>example</h1>
+      <h1>fun</h1>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
         <li id="other">Other</li>
@@ -55,6 +55,6 @@
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="../../home/js/other.js"></script>
-    <script src="./example.js"></script>
+    <script src="./fun.js"></script>
   </body>
 </html>
