--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
-            <li><a href="./works/distance/index.html"><img loading="lazy" src="./home/img/og/og-min-distance.png" alt="distance"></a><p>fun / Jun 27, 2020</p></li>
+            <li><a href="./works/triangle/index.html"><img loading="lazy" src="./home/img/og/og-min-triangle.png" alt="triangle"></a><p>triangle / Jun 28, 2020</p></li>
+            <li><a href="./works/distance/index.html"><img loading="lazy" src="./home/img/og/og-min-distance.png" alt="distance"></a><p>distance / Jun 27, 2020</p></li>
             <li><a href="./works/fun/index.html"><img loading="lazy" src="./home/img/og/og-min-fun.png" alt="fun"></a><p>fun / Jun 26, 2020</p></li>
             <li><a href="./works/greeting/index.html"><img loading="lazy" src="./home/img/og/og-min-greeting.png" alt="greeting"></a><p>greeting / Jun 25, 2020</p></li>
             <li><a href="./works/countup/index.html"><img loading="lazy" src="./home/img/og/og-min-countup.png" alt="countup"></a><p>countup / Jun 24, 2020</p></li>
