--- a/works/triangle/index.html
+++ b/works/triangle/index.html
@@ -5,7 +5,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149600281-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      trianglection gtag(){dataLayer.push(arguments);}
+      function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-149600281-2');
     </script>
