--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
-            <li><a href="./works/triangle/index.html"><img loading="lazy" src="./home/img/og/og-min-triangle.png" alt="triangle"></a><p>triangle / Jun 28, 2020</p></li>
+            <li><a href="./works/gon/index.html"><img loading="lazy" src="./home/img/og/og-min-gon.png" alt="gon"></a><p>gon / Jun 29, 2020</p></li>
             <li><a href="./works/distance/index.html"><img loading="lazy" src="./home/img/og/og-min-distance.png" alt="distance"></a><p>distance / Jun 27, 2020</p></li>
             <li><a href="./works/fun/index.html"><img loading="lazy" src="./home/img/og/og-min-fun.png" alt="fun"></a><p>fun / Jun 26, 2020</p></li>
             <li><a href="./works/greeting/index.html"><img loading="lazy" src="./home/img/og/og-min-greeting.png" alt="greeting"></a><p>greeting / Jun 25, 2020</p></li>
