--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/interstellar/index.html"><img loading="lazy" src="./home/img/og/og-min-interstellar.png" alt="interstellar"></a><p>interstellar / July 03, 2020</p></li>
             <li><a href="./works/tapioca/index.html"><img loading="lazy" src="./home/img/og/og-min-tapioca.png" alt="tapioca"></a><p>tapioca / July 02, 2020</p></li>
             <li><a href="./works/airfield/index.html"><img loading="lazy" src="./home/img/og/og-min-airfield.png" alt="airfield"></a><p>airfield / July 01, 2020</p></li>
             <li><a href="./works/toSix/index.html"><img loading="lazy" src="./home/img/og/og-min-toSix.png" alt="toSix"></a><p>toSix / Jun 30, 2020</p></li>
