--- a/works/increase/index.html
+++ b/works/increase/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | practice">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-practice.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | increase">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-increase.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | practice</title>
+    <title>Toshiya Marukubo | Homepage | increase</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,7 +36,7 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>practice</h1>
+      <h1>increase</h1>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
         <li id="other">Other</li>
@@ -48,10 +48,13 @@
     <!-- Main -->
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
+      <ul id="navigation">
+        <li>Scroll up, down, and click.</li>
+      </ul>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="../../home/js/other.js"></script>
-    <script src="./practice.js"></script>
+    <script src="./increase.js"></script>
   </body>
 </html>
