--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/aurora/index.html"><img loading="lazy" src="./home/img/og/og-min-aurora.png" alt="aurora"></a><p>aurora / July 06, 2020</p></li>
             <li><a href="./works/string/index.html"><img loading="lazy" src="./home/img/og/og-min-string.png" alt="string"></a><p>string / July 05, 2020</p></li>
             <li><a href="./works/cyberRainbow/index.html"><img loading="lazy" src="./home/img/og/og-min-cyberRainbow.png" alt="cyberRainbow"></a><p>cyberRainbow / July 04, 2020</p></li>
             <li><a href="./works/jump/index.html"><img loading="lazy" src="./home/img/og/og-min-jump.png" alt="jump"></a><p>jump / July 04, 2020</p></li>
