--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/mumVer1/index.html"><img loading="lazy" src="./home/img/og/og-min-mumVer1.png" alt="mumVer1"></a><p>mumVer1 / July 09, 2020</p></li>
             <li><a href="./works/confetti/index.html"><img loading="lazy" src="./home/img/og/og-min-confetti.png" alt="confetti"></a><p>confetti / July 08, 2020</p></li>
             <li><a href="./works/circuit/index.html"><img loading="lazy" src="./home/img/og/og-min-circuit.png" alt="circuit"></a><p>circuit / July 07, 2020</p></li>
             <li><a href="./works/noisy/index.html"><img loading="lazy" src="./home/img/og/og-min-noisy.png" alt="noisy"></a><p>noisy / July 07, 2020</p></li>
