--- a/works/mumVer1/index.html
+++ b/works/mumVer1/index.html
@@ -47,7 +47,7 @@
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <h2>Traditinal Design in Japan.</h2>
+      <h2>Traditional pattern in Japan.</h2>
       <canvas id="canvas">Canvas not supported.</canvas>
     </main>
     <!-- Script -->
