--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/nightmare/index.html"><img loading="lazy" src="./home/img/og/og-min-nightmare.png" alt="nightmare"></a><p>nightmare / July 12, 2020</p></li>
             <li><a href="./works/net/index.html"><img loading="lazy" src="./home/img/og/og-min-net.png" alt="net"></a><p>net / July 11, 2020</p></li>
             <li><a href="./works/moonRiver/index.html"><img loading="lazy" src="./home/img/og/og-min-moonRiver.png" alt="moonRiver"></a><p>moonRiver / July 10, 2020</p></li>
             <li><a href="./works/harvest/index.html"><img loading="lazy" src="./home/img/og/og-min-harvest.png" alt="harvest"></a><p>harvest / July 10, 2020</p></li>
