--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/clumsyNinja/index.html"><img loading="lazy" src="./home/img/og/og-min-clumsyNinja.png" alt="clumsyNinja"></a><p>clumsyNinja / July 13, 2020</p></li>
+            <li><a href="./works/rainbowTunnel/index.html"><img loading="lazy" src="./home/img/og/og-min-rainbowTunnel.png" alt="rainbowTunnel"></a><p>rainbowTunnel / July 13, 2020</p></li>
             <li><a href="./works/nightmare/index.html"><img loading="lazy" src="./home/img/og/og-min-nightmare.png" alt="nightmare"></a><p>nightmare / July 12, 2020</p></li>
             <li><a href="./works/net/index.html"><img loading="lazy" src="./home/img/og/og-min-net.png" alt="net"></a><p>net / July 11, 2020</p></li>
             <li><a href="./works/moonRiver/index.html"><img loading="lazy" src="./home/img/og/og-min-moonRiver.png" alt="moonRiver"></a><p>moonRiver / July 10, 2020</p></li>
