--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
             <li><a href="./works/socialDistance/index.html"><img loading="lazy" src="./home/img/og/og-min-socialDistance.png" alt="socialDistance"></a><p>socialDistance / Apr 13, 2020</p></li>
             <li><a href="./works/stayHome/index.html"><img loading="lazy" src="./home/img/og/og-min-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
             <li><a href="./works/sunFlower/index.html"><img loading="lazy" src="./home/img/og/og-min-sunFlower.png" alt="sunFlower"></a><p>sunFlower / Apr 10, 2020</p></li>
+            <li><a href="http://www.marukubo.net/blogs"><img loading="lazy" src="./home/img/og/og-min-blog.png" alt="blog"></a><p>blog / Apr 01, 2020</p></li>
+            <li><a href="http://www.marukubo.net/"><img loading="lazy" src="./home/img/og/og-min-learningPlace.png" alt="learningPlace"></a><p>learningPlace / Mar 15, 2020</p></li>
             <li><a href="./works/bigBang/index.html"><img loading="lazy" src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
             <li><a href="./works/orangeKun/index.html"><img loading="lazy" src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
             <li><a href="./works/particleParty/index.html"><img loading="lazy" src="./home/img/og/og-min-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
