--- a/index.html
+++ b/index.html
@@ -34,22 +34,23 @@
     <link rel="stylesheet" href="./home/css/style.css">
   </head>
   <body style="display: none;">
+    <div id="mainImage">
+      <canvas id="canvas"></canvas>
+    </div>
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya<br>Marukubo</a></h1>
     </header>
-    <div id="mainImage">
-      <canvas id="canvas"></canvas>
-    </div>
     <div id="content">
       <!-- Main -->
       <main>
         <!-- Message -->
         <section id="message">
+          <p>This my challenge was the end at July 13, 2020.</p>
           <h2>I'm doing what I can do on the code.</h2>
           <p>
-            Published works are using only pure JavaScript, because of learning.<br>
-            I'm not a web dev nor designer, so I don't know small things... <a href="#about">more</a>
+            The published works has been created using canvas 2D on pure JavaScript.<br>
+            I'm not a web dev nor designer, so I don't know the detail... <a href="#about">more</a>
           </p>
           <nav>
             <ul>
@@ -65,6 +66,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/inTheEnd/index.html"><img loading="lazy" src="./home/img/og/og-min-inTheEnd.png" alt="inTheEnd"></a><p>inTheEnd / July 13, 2020</p></li>
             <li><a href="./works/clumsyNinja/index.html"><img loading="lazy" src="./home/img/og/og-min-clumsyNinja.png" alt="clumsyNinja"></a><p>clumsyNinja / July 13, 2020</p></li>
             <li><a href="./works/rainbowTunnel/index.html"><img loading="lazy" src="./home/img/og/og-min-rainbowTunnel.png" alt="rainbowTunnel"></a><p>rainbowTunnel / July 13, 2020</p></li>
             <li><a href="./works/nightmare/index.html"><img loading="lazy" src="./home/img/og/og-min-nightmare.png" alt="nightmare"></a><p>nightmare / July 12, 2020</p></li>
@@ -182,24 +184,23 @@
             <h3>Me</h3>
             <p>
               Hi, I'm Toshiya Marukubo.<br>
-              I'm a non-professional. Of course Neither web dev nor designer.<br>
-              Just now it is my hobby to write JavaScript and Node.js.<br>
+              I'm not a web dev nor designer.<br>
+              it is my hobby to write JavaScript and Node.js now.<br>
               I'm not good at english, so please forgive my mistakes of sentence.
             </p>
             <p>
               I'm living in Matsuyama, Ehime, Japan where are famous for production of orange.<br>
-              There are many spas near by.<br>
+              There are many spas nearby.<br>
               Thanks to there are mountains in the south, the north are sea, climate is warm, it does not almost snow.<br>
               It is a countryside but it is a good place.
             </p>
             <h3>This Site</h3>
             <p>
               I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
-              Basically, just now published works is using only pure JavaScript. I'm not using plugin, because of learning.<br>
-              From now on, I'm thinking to learn and to publish canvas 3D.<br>
+              The published works has been created using canvas 2D on pure JavaScript. I'm not using plugin, because of learning.
             </p>
             <p>
-              All the works's code here are published on <a href="https://codepen.io/toshiya-marukubo">Codepen</a>, <a href="https://github.com/toshiya-marukubo">Github</a>. Please go to see it.
+              All the works's code here are published on <a href="https://codepen.io/toshiya-marukubo">CodePen</a>, <a href="https://github.com/toshiya-marukubo">Github</a>. Please go to see it.
             </p>
             <h3>You</h3>
             <p>
