--- a/works/inTheEnd/index.html
+++ b/works/inTheEnd/index.html
@@ -51,7 +51,7 @@
         Thanks to CodePen and GitHub for giving me a place to published my works for free. sorry, I have not money.<br>
         And Thanks for my Friends who gave me a 'like', 'reply', watching. Definitely, it gave me a motivation. Thank you so much.
       </p>
-      <p>See you tomorrow. I don't know anything yet.</p>
+      <p>I don't know anything yet.</p>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
         <li><a href="../../index.html">Home</a></li>
