--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <main>
         <!-- Message -->
         <section id="message">
-          <p>Not updated. This my challenge was the end at July 13, 2020.</p>
+          <p>Not updated. This my challenge was the end at July 13, 2020.<br>Check out on <a href="https://codepen.io/toshiya-marukubo">CodePen</a> from now on.</p>
           <h2>I'm doing what I can do on the code.</h2>
           <p>
             The published works has been created using canvas 2D on pure JavaScript.<br>
