--- a/pattern/index.html
+++ b/pattern/index.html
@@ -42,7 +42,7 @@
       <nav>
         <ul>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
-          <li><a href="./works/index.html">Works</a></li>
+          <li class="flash"><a href="./works/index.html">Works</a></li>
         </ul>
       </nav>
     </header>
