--- a/pattern/works/amime/index.html
+++ b/pattern/works/amime/index.html
@@ -49,7 +49,7 @@
     <!-- Main -->
     <main>
       <h2 id="title">Now Loading...</h2>
-      <span class="scroll">Scroll</span>  
+      <span class="scroll">Click or Scroll</span>  
     </main>
     <!-- Script -->
     <script defer src="../../scripts/fadeInOut.js"></script>
