--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       a:visited {
         color: white;
       }
+      h1 {
+        font-size: 1rem;
+      }
       li {
         padding: 0.8rem;
       }
@@ -53,6 +56,7 @@
     <title>Toshiya Marukubo | Homepage</title>
   </head>
   <body>
+    <h1>Choose my challenge.</h1>
     <ul>
       <li><a href="./pattern/index.html">Pattern</a></li>
       <li><a href="./100workschallenge/index.html">100 Works Challenge 2020</a><span> (Not updated.)</span></li>
