--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <body>
     <h1>Choose my challenge.</h1>
     <ul>
-      <li><a href="./pattern/index.html">Pattern</a></li>
+      <li><a href="./pattern/index.html">Pattern</a><span> (Prototype.)</span></li>
       <li><a href="./100workschallenge/index.html">100 Works Challenge 2020</a><span> (Not updated.)</span></li>
     </ul>
   </body>
