--- a/pattern/works/seigaiha/index.html
+++ b/pattern/works/seigaiha/index.html
@@ -50,7 +50,7 @@
     <!-- Main -->
     <main>
       <h2 id="title">Now Loading...</h2>
-      <span class="scroll">Scroll</span>  
+      <span class="scroll">Click</span>  
     </main>
     <!-- Script -->
     <script defer src="../../scripts/fadeInOut.js"></script>
