--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -36,13 +36,12 @@
   </head>
   <body style="display: none;">
     <!-- Header -->
-    <header class="header">
+    <header>
       <h1><a href="../index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
-          <li>Introduces patterns.</li>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
-          <li class="flash"><a href="../index.html">Works</a></li>
+          <li class="flash"><a href="./index.html">Works</a></li>
         </ul>
       </nav>
     </header>
@@ -73,5 +72,6 @@
     </main>
     <!-- Script -->
     <script defer src="../scripts/fadeInOut.js"></script>
+    <script defer src="../scripts/loadedAnimation.js"></script>
   </body>
 </html>
