--- a/pattern/index.html
+++ b/pattern/index.html
@@ -41,7 +41,6 @@
       <h1><a href="./index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
-          <li>Introduces patterns.</li>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
           <li class="flash"><a href="./works/index.html">Works</a></li>
         </ul>
@@ -49,10 +48,11 @@
     </header>
     <!-- Main -->
     <main>
-      <h2 id="title">Traditional Japanese Patterns / 日本の伝統文様</h2>
+      <h2 id="title">Introduces Traditional Japanese Patterns / 日本の伝統文様</h2>
     </main>
     <!-- Script -->
     <script defer src="./scripts/fadeInOut.js"></script>
     <script defer src="./scripts/falling.js"></script>
+    <script defer src="./scripts/loadedAnimation.js"></script>
   </body>
 </html>
