--- a/pattern/works/seigaiha/index.html
+++ b/pattern/works/seigaiha/index.html
@@ -41,7 +41,6 @@
       <h1><a href="../../index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
-          <li>Introduces patterns.</li>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
           <li class="flash"><a href="../index.html">Works</a></li>
         </ul>
@@ -55,6 +54,7 @@
     <!-- Script -->
     <script defer src="../../scripts/fadeInOut.js"></script>
     <script defer src="../../scripts/movePage.js"></script>
+    <script defer src="../../scripts/loadedAnimation.js"></script>
     <script defer src="./seigaiha.js"></script>
   </body>
 </html>
