--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -62,5 +62,6 @@
     </main>
     <!-- Script -->
     <script defer src="../scripts/fadeInOut.js"></script>
+    <script defer src="../scripts/loadedImage.js"></script>
   </body>
 </html>
