--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,16 +48,17 @@
     <!-- Main -->
     <main>
       <ul>
-        <li><a href="./seigaiha/index.html"><img src="../images/seigaiha.png" alt="seigaiha image"></a></li>
-        <li><a href="./kikuseigaiha/index.html"><img src="../images/kikuseigaiha.png" alt="kikuseigaiha image"></a></li>
-        <li><a href="./hanaseigaiha/index.html"><img src="../images/hsnaseigaiha.png" alt="hsnaseigaiha image"></a></li>
-        <li><a href="./hoshisippou/index.html"><img src="../images/hoshisippou.png" alt="hoshisippou image"></a></li>
-        <li><a href="./sippoutsunagi/index.html"><img src="../images/sippoutsunagi.png" alt="sippoutsunagi image"></a></li>
-        <li><a href="./hanasippou/index.html"><img src="../images/hanasippou.png" alt="hanasippou image"></a></li>
-        <li><a href="./amime/index.html"><img src="../images/amime.png" alt="amime image"></a></li>
+        <li><a href="./gokuzushi/index.html"><img src="../images/gokuzushi.png" alt="gokuzushi image"></a></li>
+        <li><a href="./kikkouhanabishi/index.html"><img src="../images/kikkouhanabishi.png" alt="kikkouhanabishi image"></a></li>
         <li><a href="./komochikikkou/index.html"><img src="../images/komochikikkou.png" alt="komochikikkou image"></a></li>
         <li><a href="./kikkoutsunagi/index.html"><img src="../images/kikkoutsunagi.png" alt="kikkoutsunagi image"></a></li>
-        <li><a href="./kikkouhanabishi/index.html"><img src="../images/kikkouhanabishi.png" alt="kikkouhanabishi image"></a></li>
+        <li><a href="./amime/index.html"><img src="../images/amime.png" alt="amime image"></a></li>
+        <li><a href="./hanasippou/index.html"><img src="../images/hanasippou.png" alt="hanasippou image"></a></li>
+        <li><a href="./sippoutsunagi/index.html"><img src="../images/sippoutsunagi.png" alt="sippoutsunagi image"></a></li>
+        <li><a href="./hoshisippou/index.html"><img src="../images/hoshisippou.png" alt="hoshisippou image"></a></li>
+        <li><a href="./hanaseigaiha/index.html"><img src="../images/hsnaseigaiha.png" alt="hsnaseigaiha image"></a></li>
+        <li><a href="./kikuseigaiha/index.html"><img src="../images/kikuseigaiha.png" alt="kikuseigaiha image"></a></li>
+        <li><a href="./seigaiha/index.html"><img src="../images/seigaiha.png" alt="seigaiha image"></a></li>
       </ul>
     </main>
     <!-- Script -->
