--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./sanzushi/index.html"><img src="../images/sankuzushi.png" alt="sankuzushi image"></a></li>
         <li><a href="./gokuzushi/index.html"><img src="../images/gokuzushi.png" alt="gokuzushi image"></a></li>
         <li><a href="./kikkouhanabishi/index.html"><img src="../images/kikkouhanabishi.png" alt="kikkouhanabishi image"></a></li>
         <li><a href="./komochikikkou/index.html"><img src="../images/komochikikkou.png" alt="komochikikkou image"></a></li>
