created anpanman, irekobishi.

--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,8 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./anpanman/index.html"><img src="../images/anpanman.png" alt="anpanman image"></a></li>
+        <li><a href="./irekobishi/index.html"><img src="../images/irekobishi.png" alt="irekobishi image"></a></li>
         <li><a href="./sankuzushi/index.html"><img src="../images/sankuzushi.png" alt="sankuzushi image"></a></li>
         <li><a href="./gokuzushi/index.html"><img src="../images/gokuzushi.png" alt="gokuzushi image"></a></li>
         <li><a href="./kikkouhanabishi/index.html"><img src="../images/kikkouhanabishi.png" alt="kikkouhanabishi image"></a></li>
