--- a/pattern/works/anpanman/index.html
+++ b/pattern/works/anpanman/index.html
@@ -26,33 +26,34 @@
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
     <!-- Icons --><!-- Referenced https://webdesign-trends.net/entry/7251 -->
-    <link rel="icon" type="image/png" href="./images/favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="../../images/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../images/apple-touch-icon.png">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | Pattern</title>
+    <title>Toshiya Marukubo | Homepage | Pattern | Anpanman</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../../styles/reset.css">
+    <link rel="stylesheet" href="../../styles/style.css">
   </head>
   <body style="display: none;">
     <canvas id="canvas"></canvas>
     <!-- Header -->
     <header>
-      <h1><a href="./index.html"><span class="logo"></span>Pattern</a></h1>
+      <h1><a href="../../index.html"><span class="logo"></span>Pattern</a></h1>
       <nav>
         <ul>
           <li><a href="https://twitter.com/toshiyamarukubo" target="_blank">@toshiyamarukubo</a></li>
-          <li class="flash"><a href="./works/index.html">Works</a></li>
+          <li class="flash"><a href="../index.html">Works</a></li>
         </ul>
       </nav>
     </header>
     <!-- Main -->
     <main>
-      <h2 id="title">Introduces Traditional Japanese Patterns / 日本の伝統文様</h2>
+      <h2 id="title">Now Loading...</h2>
+      <span class="scroll">Click</span>  
     </main>
     <!-- Script -->
-    <script defer src="./scripts/fadeInOut.js"></script>
-    <script defer src="./scripts/falling.js"></script>
-    <script defer src="./scripts/preloadImage.js"></script>
+    <script defer src="../../scripts/fadeInOut.js"></script>
+    <script defer src="../../scripts/movePage.js"></script>
+    <script defer src="./anpanman.js"></script>
   </body>
 </html>
