--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./uroko/index.html"><img src="../images/uroko.png" alt="uroko image"></a></li>
         <li><a href="./takedabishi/index.html"><img src="../images/takedabishi.png" alt="takedabishi image"></a></li>
         <li><a href="./narihirabishi/index.html"><img src="../images/narihirabishi.png" alt="narihirabishi image"></a></li>
         <li><a href="./anpanman/index.html"><img src="../images/anpanman.png" alt="anpanman image"></a></li>
