--- a/pattern/works/ararekomon/index.html
+++ b/pattern/works/ararekomon/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" href="../../images/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../../images/apple-touch-icon.png">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | Pattern | Kikkoutsunagi</title>
+    <title>Toshiya Marukubo | Homepage | Pattern | Ararekomon</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../styles/reset.css">
     <link rel="stylesheet" href="../../styles/style.css">
@@ -54,6 +54,6 @@
     <!-- Script -->
     <script defer src="../../scripts/fadeInOut.js"></script>
     <script defer src="../../scripts/movePage.js"></script>
-    <script defer src="./exsample.js"></script>
+    <script defer src="./ararekomon.js"></script>
   </body>
 </html>
