--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | Pattern | Works</title>
+    <title>Toshiya Marukubo | Homepage | Pattern | Kindooshi</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./kindooshi/index.html"><img src="../images/kindooshi.png" alt="kindooshi image"></a></li>
         <li><a href="./ararekomon/index.html"><img src="../images/ararekomon.png" alt="ararekomon image"></a></li>
         <li><a href="./kuzureasanoha/index.html"><img src="../images/kuzureasanoha.png" alt="kuzureasanoha image"></a></li>
         <li><a href="./asanoha/index.html"><img src="../images/asanoha.png" alt="asanoha image"></a></li>
