--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,10 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./katsuojima/index.html"><img src="../images/katsuojima.png" alt="katsuojima image"></a></li>
+        <li><a href="./mijinsuji/index.html"><img src="../images/mijinsuji.png" alt="mijinsuji image"></a></li>
+        <li><a href="./mansuji/index.html"><img src="../images/mansuji.png" alt="mansuji image"></a></li>
+        <li><a href="./sensuji/index.html"><img src="../images/sensuji.png" alt="sensuji image"></a></li>
         <li><a href="./misujidate/index.html"><img src="../images/misujidate.png" alt="misujidate image"></a></li>
         <li><a href="./kindooshi/index.html"><img src="../images/kindooshi.png" alt="kindooshi image"></a></li>
         <li><a href="./ararekomon/index.html"><img src="../images/ararekomon.png" alt="ararekomon image"></a></li>
