--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       h1 {
         font-size: 1rem;
       }
+      h2 {
+        font-size: 1rem;
+      }
       li {
         padding: 0.8rem;
       }
@@ -58,8 +61,15 @@
   <body>
     <h1>Choose my challenge.</h1>
     <ul>
-      <li><a href="./pattern/index.html">Pattern</a><span> (Prototype.)</span></li>
-      <li><a href="./100workschallenge/index.html">100 Works Challenge 2020</a><span> (Not updated.)</span></li>
+      <li><a href="./pattern/index.html">Pattern (Prototype.)</a></li>
+      <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 (Not updated.)</a></li>
+    </ul>
+    <h2>Links</h2>
+    <ul>
+      <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+      <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+      <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
+      <li><a href="http://www.marukubo.net/">Learning Place (for learning Node.js, mongoDB.)</a></li>
     </ul>
   </body>
 </html>
