--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,13 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./ryoukomochijima/index.html"><img src="../images/ryoukomochijima.png" alt="ryoukomochijima image"></a></li>
+        <li><a href="./komochijima/index.html"><img src="../images/komochijima.png" alt="komochijima image"></a></li>
+        <li><a href="./ryoutakijima/index.html"><img src="../images/ryoutakijima.png" alt="ryoutakijima image"></a></li>
+        <li><a href="./katatakijima/index.html"><img src="../images/katatakijima.png" alt="katatakijima image"></a></li>
+        <li><a href="./yatarajima2/index.html"><img src="../images/yatarajima2.png" alt="yatarajima2 image"></a></li>
+        <li><a href="./yatarajima/index.html"><img src="../images/yatarajima.png" alt="yatarajima image"></a></li>
+        <li><a href="./boujima/index.html"><img src="../images/boujima.png" alt="boujima image"></a></li>
         <li><a href="./katsuojima/index.html"><img src="../images/katsuojima.png" alt="katsuojima image"></a></li>
         <li><a href="./mijinsuji/index.html"><img src="../images/mijinsuji.png" alt="mijinsuji image"></a></li>
         <li><a href="./mansuji/index.html"><img src="../images/mansuji.png" alt="mansuji image"></a></li>
