--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,9 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./yamajimon/index.html"><img src="../images/yamajimon.png" alt="yamajimon image"></a></li>
+        <li><a href="./tatewaku/index.html"><img src="../images/tatewaku.png" alt="tatewaku image"></a></li>
+        <li><a href="./yorokejima/index.html"><img src="../images/yorokejima.png" alt="yorokejima image"></a></li>
         <li><a href="./ryoukomochijima/index.html"><img src="../images/ryoukomochijima.png" alt="ryoukomochijima image"></a></li>
         <li><a href="./komochijima/index.html"><img src="../images/komochijima.png" alt="komochijima image"></a></li>
         <li><a href="./ryoutakijima/index.html"><img src="../images/ryoutakijima.png" alt="ryoutakijima image"></a></li>
