--- a/pattern/works/yamajimon/index.html
+++ b/pattern/works/yamajimon/index.html
@@ -29,18 +29,10 @@
     <link rel="icon" type="image/png" href="../../images/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../../images/apple-touch-icon.png">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | Pattern | Practice</title>
+    <title>Toshiya Marukubo | Homepage | Pattern | Yamajimon</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../styles/reset.css">
     <link rel="stylesheet" href="../../styles/style.css">
-    <style>
-      #range {
-        position: absolute;
-        bottom: 1.6rem;
-        left: 10%;
-        width: 80%;
-      }
-    </style>
   </head>
   <body style="display: none;">
     <canvas id="canvas"></canvas>
@@ -58,11 +50,10 @@
     <main>
       <h2 id="title">Now Loading...</h2>
       <span class="scroll">Click</span>  
-      <input type="range" id="range" min="0" max="50" value="40">
     </main>
     <!-- Script -->
     <script defer src="../../scripts/fadeInOut.js"></script>
     <script defer src="../../scripts/movePage.js"></script>
-    <script defer src="./practice.js"></script>
+    <script defer src="./yamajimon.js"></script>
   </body>
 </html>
