--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./amejima/index.html"><img src="../images/amejima.png" alt="amejima image"></a></li>
         <li><a href="./yamajimon/index.html"><img src="../images/yamajimon.png" alt="yamajimon image"></a></li>
         <li><a href="./tatewaku/index.html"><img src="../images/tatewaku.png" alt="tatewaku image"></a></li>
         <li><a href="./yorokejima/index.html"><img src="../images/yorokejima.png" alt="yorokejima image"></a></li>
